--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <script src="script.js"></script>
 </head>
 
-<body>
-  <h1>Hallo Welt</h1>
+<body onload="init()">
+  <h1>Hallo Welt 1</h1>
   <button class="btn btn-primary">Action</button>
   das hier ist ein <a href="#">Link</a>
 
