--- a/index.html
+++ b/index.html
@@ -5,14 +5,69 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+
+
   <script src="script.js"></script>
+
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+
 </head>
 
-<body onload="init()">
-  <h1>Hallo Welt 1</h1>
-  <button class="btn btn-primary">Action</button>
-  das hier ist ein <a href="#">Link</a>
+<body>
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Quizapp</a>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="card quiz_card">
+      <img src="img/pencil.jpg" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">Frage</h5>
+
+        <div class="card mb-2">
+          <div class="card-body">
+            Antwort
+          </div>
+        </div>
+        <div class="card mb-2">
+          <div class="card-body">
+            Antwort
+          </div>
+        </div>
+        <div class="card mb-2">
+          <div class="card-body">
+            Antwort
+          </div>
+        </div>
+        <div class="card mb-2">
+          <div class="card-body">
+            Antwort
+          </div>
+        </div>
+
+
+        <div class="question-footer">
+          <spam>
+            <b>1</b> von <b>5</b> Fragen
+          </spam>
+          <button class="btn btn-primary">Nächste Frage</button>
+        </div>
+
+
+
+      </div>
+    </div>
+  </div>
+
 
 </body>
 
